<resources>
    <string name="app_name">Fit and Fine</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="abp_app_name">ActionBarPgoress</string>
    <string name="action_settings">Settings</string>
    <string name="pref_share_key">prefShareKey</string>
    <string name="pref_share_summary">Tell your friend about this application</string>
    <string name="pref_rate_review_key">prefRateReviewKey</string>
    <string name="pref_app_summary">Fitness workout 30 Days Fitness</string>
    <string name="pref_app_title">Application Name</string>
    <string name="pref_developer_summary">Developer</string>
    <string name="pref_developer_title">Developed by</string>
    <string name="pref_rate_review_summary">Rate and review this app if you think it is awesome</string>
    <string name="pref_rate_review_title">Rate &amp; Review</string>
    <string name="pref_share_title">Tell a Friend</string>
    <string name="pref_version_summary">Version 1.0</string>
    <string name="pref_version_title">Build Version</string>
    <string name="program">program</string>
    <string name="preference_home">Home Page</string>
    <string name="preference_about">About Us</string>
    <string name="preference_shared_summary">Tell your friends about this application</string>
    <string name="preference_share_with_title">Tell a friend about this application</string>
    <string name="subject">Stay Fit with This App</string>
    <string name="app_suggestions">Suggestions</string>
    <string name="app_title_msg">We are small team dedicated to developing the best free apps for you!</string>
    <string name="app_title_rate_alert">We are small team dedicated to developing the best free apps for you!</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bent_leg_twist">bent_leg_twist</string>
    <string name="bent_leg_twist_desc">Lie down on your back, with your arms stretched to the side. Raise your legs and bend your knees at 90 degree angle. Now twist your knees to the left. Stay in this position for 1-2 minutes. Return to the initial position and do the same on the right side.\n\n</string>
    <string name="bicycle_crunches">bicycle_crunches</string>
    <string name="bicycle_crunches_desc">Lie down by keeping your hand, on the back of your head. Lift your right knee and stretch your left elbow towards it. Repeat the same for the other side.\n\n</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="butt_bridge">butt_bridge</string>
    <string name="butt_bridge_desc">Start by lying on your back. Bend your legs. Take the support of your hands on the side, and lift the butt up, then bring it down. Repeat it.\n\n</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clapping_crunches">clapping_crunches</string>
    <string name="clapping_crunches_desc">Lie down on the ground. Raise your upper body and bend your knees. Now, clap under the knees, by lifting the legs alternatively.\n\n</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="cross_arm_crunches">cross_arm_crunches</string>
    <string name="cross_arm_crunches_desc">Lie down by bending your knees. Keep your arms crossed on your chest. Raise your upper body and return to the initial position. Repeat it.\n\n</string>
    <string name="dead_bug">dead_bug</string>
    <string name="dead_bug_desc">Start by lying with your back on the ground. Raise your knees and make it perpendicuar to the ground. Stretch your arms, pointing towards the ceiling. Now, stretch your right arm towards your head and lower your left leg. Return back to the starting position. Repeat it on the other side.\n\n</string>
    <string name="default_notification_channel_id">fcm_default_channel</string>
    <string name="default_notification_channel_name">News</string>
    <string name="default_web_client_id">270642714267-0nn53n52ae2l9grho378jiklf2ejnobe.apps.googleusercontent.com</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://abs-workout-b99ab.firebaseio.com</string>
    <string name="flutter_kicks">flutter_kicks</string>
    <string name="flutter_kicks_desc">Start by lying on your back. Keep your arms on the side and lift your legs. Let the legs be as straight as possible. Now, quickly raise your right leg and at the same time, lower your left leg. Then do the same on the other leg. Repeat it.\n\n</string>
    <string name="fri">Friday</string>
    <string name="gcm_defaultSenderId">270642714267</string>
    <string name="google_api_key">AIzaSyAWJ8_WulGbjLF13uKVNGpNzp-tmAvPN9A</string>
    <string name="google_app_id">1:270642714267:android:36fedee694fb7121</string>
    <string name="google_crash_reporting_api_key">AIzaSyAWJ8_WulGbjLF13uKVNGpNzp-tmAvPN9A</string>
    <string name="google_storage_bucket">abs-workout-b99ab.appspot.com</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="leg_drops">leg_drops</string>
    <string name="leg_drops_desc">Start by lying with your back on the ground. Keep your hands on the side and lift both your legs to a 90 degree angle. Feel the pressure on your abs. Now, slightly lower your legs and return back. Repeat this.\n\n</string>
    <string name="long_arm_crunches">long_arm_crunches</string>
    <string name="long_arm_crunches_desc">Lie down with your knees bent. Stretch your arms towards your head. Raise your upper body to a 30 degree angle. Return back to the initial position. Repeat this.\n\n</string>
    <string name="md_back_label">Back</string>
    <string name="md_cancel_label">Cancel</string>
    <string name="md_choose_label">Choose</string>
    <string name="md_custom_label">Custom</string>
    <string name="md_done_label">Done</string>
    <string name="md_error_label">Error</string>
    <string name="md_presets_label">Presets</string>
    <string name="md_storage_perm_error">Your app has not been granted the READ_EXTERNAL_STORAGE permission.</string>
    <string name="mon">Monday</string>
    <string name="mountain_climber">mountain_climber</string>
    <string name="mountain_climber_desc">Initially, be in the push-up position. By keeping the left leg straight, bend your right knee. Now, move to the initial position and repeat the same on the other leg. Let the switching between the sides be fast.\n\n</string>
    <string name="msg_subscribe_failed">Failed to subscribe to news topic</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_subtitle">yourmail@.com</string>
    <string name="nav_header_title">Gym Fitness</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="new_folder">New Folder</string>
    <string name="noreminders">No Reminders</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="plank">plank</string>
</resources>